On branch master  Changes to be committed: 	modified:   web/arabidopsisCross.html

--- a/web/arabidopsisCross.html
+++ b/web/arabidopsisCross.html
@@ -27,6 +27,8 @@ Bay-0 x Shahdara (BXS):</A>
 <Blockquote>
 The Bay-0 x Shahdara genetic reference population of 420 recombinant inbred lines (RIL) was created by Olivier Loudet and Sylvain Chaillou between 1997 and 2000 at the <A HREF=" http://w3.inra.fr/ " target="_blank" class="fs14">INRA</A> in Versailles, France. It is one of the largest publically available <I>Arabidopsis</I> RIL sets and more than 10 times larger than most rodent RILs. <I>Arabidopsis</I> is commonly known as mustard weed, and is one of the favored model organisms used by geneticists and developmental biologists. This plant has a genome consisting of <A HREF="http://www.inra.fr/qtlat/BayxSha/BayxShaMarker.htm" target="_blank" class="fs14">five</A> chromsomes and a total of 125 megabases of DNA, equivalent in length to a single human chromosome. However, the genome is nonetheless rich and contains approximately <A HREF="http://www.tigr.org/tdb/e2k1/ath1/intro.shtml" target="_blank" class="fs14">26,000</A> genes. Full sequence data are available for this species. (The Col-0 accession was sequenced.)
 
+<P>The Bay accession originates in Germany, whereas the Shadara accession original in Tajikistan.
+
 <P>Please site the following publication when using the Bay-0 x Shahdara (BXS) data sets:
 
 <Blockquote>
