Committer: root <root@spring211.uthsc.edu>  On branch master  Changes to be committed: 	modified:   web/dbdoc/HZI_PR8M_Q_0612.html 	modified:   web/dbdoc/INIA_Adrenal_RMA_0612.html 	modified:   web/dbdoc/INIA_PG_RMA_0612.html 	modified:   web/reference.html 	modified:   web/webqtl/base/webqtlConfigLocal.py 	modified:   web/webqtl/showTrait/DataEditingPage.py

--- a/web/reference.html
+++ b/web/reference.html
@@ -31,6 +31,8 @@
 
 <BR> <BR>
 <left>
+<a href="#2012">2012</a> |
+<a href="#2011">2011</a> |
 <a href="#2010">2010</a> |
 <a href="#2009">2009</a> |  
 <a href="#2008">2008</a> |  
@@ -51,6 +53,25 @@
 
 <B><I>Please send us citations to articles that we may have missed.</I></B>
 <OL>
+
+<BR>
+<BR>
+
+
+<LI>
+Mulligan MK, Wang X, Adler AL, Mozhui K, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Complex control of GABA(A) receptor subunit mRNA expression: variation, covariation, and genetic regulation. PLoS One 7(4):e34586. 
+<BR><SMALL>
+From the Abstract: Expression of the GABA-A type receptor subunits is highly variable among individuals, but the cause and impact of this fluctuation remains unknown. We have studied sources of variation for all 19 receptor subunits using massive expression data sets collected across multiple brain regions and platforms in mice and humans. We identified upstream genetic loci that influence subunit expression, including three unlinked regions of chromosome 5 that modulate the expression of nine subunits in hippocampus, and that are also associated with multiple phenotypes. Candidate genes within these loci include, Naaa, Nos1, and Zkscan1. We confirmed a high level of coexpression for subunits comprising the major channel--Gabra1, Gabrb2, and Gabrg2--and identified conserved members of this expression network in mice and humans.<A HREF="http://www.plosone.org/article/fetchObjectAttachment.action;jsessionid=FD5CD26B1104BCD693F22ABD746ED332?uri=info%3Adoi%2F10.1371%2Fjournal.pone.0038169&representation=PDF" target="_blank" class="fwn">PDF version</A><A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0034586" target="_blank" class="fwn"><I>Full Text version</I> </A> 
+</SMALL>
+
+<BR>
+<BR>
+
+<LI>
+Boughter JD Jr, Mulligan MK, St John SJ, Tokita K, Lu L, Heck DH, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Genetic control of a central pattern generator: Rhythmic oromotor movement in mice Is controlled by a major locus near Atp1a2. PLoS One 7(5):e38169
+<BR><SMALL>
+From the Abstract: Fluid licking in mice is a rhythmic behavior that is controlled by a central pattern generator (CPG) located in a complex of brainstem nuclei. C57BL/6J (B6) and DBA/2J (D2) strains differ significantly in water-restricted licking, with a highly heritable difference. The Lick1 interval on distal Chr 1 contains several strong candidate genes. One of these is a sodium/potassium pump subunit (Atp1a2) with widespread expression in astrocytes, as well as in a restricted population of neurons. Both this subunit and the entire Na(+)/K(+)-ATPase molecule have been implicated in rhythmogenesis for respiration and locomotion. Sequence variants in or near Apt1a2 strongly modulate expression of the cognate mRNA in multiple brain regions. This gene region has recently been sequenced exhaustively and we have cataloged over 300 non-coding and synonymous mutations segregating among BXD strains, one or more of which is likely to contribute to differences in central pattern generator tempo.<A HREF="http://www.plosone.org/article/fetchObjectAttachment.action;jsessionid=FD5CD26B1104BCD693F22ABD746ED332?uri=info%3Adoi%2F10.1371%2Fjournal.pone.0038169&representation=PDF" target="_blank" class="fwn">PDF version</A>
+</SMALL>
 
 <BR>
 <BR>
@@ -473,11 +494,29 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 
 
 
+<BLOCKQUOTE class="fs14">
+		<A NAME="2012" class="subtitle"">GeneNetwork (2012) </A>
+<BLOCKQUOTE>
+
+</Blockquote>
+<OL>
+
+
+<LI>
+Boughter JD Jr, Mulligan MK, St John SJ, Tokita K, Lu L, Heck DH, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Genetic control of a central pattern generator: Rhythmic oromotor movement in mice Is controlled by a major locus near Atp1a2. PLoS One 7(5):e38169. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0038169" target="_blank" class="fwn"><I>Full Text version</I> </A> 
+
+<LI>
+Mulligan MK, Wang X, Adler AL, Mozhui K, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Complex control of GABA(A) receptor subunit mRNA expression: variation, covariation, and genetic regulation. PLoS One 7(4):e34586. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0034586" target="_blank" class="fwn"><I>Full Text version</I> </A> 
+
+
+<LI>
+Rietman ML, Sommeijer JP; Neuro-Bsik Mouse Phenomics Consortium, Levelt CN, Heimel JA (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22347157" target="_blank" class="fwn">2012</A>) Candidate genes in ocular dominance plasticity. Front Neurosci 6:11
+. <A href="http://www.frontiersin.org/Journal/DownloadFile.ashx?pdf=1&FileId=%202788&articleId=%2014498&Version=%201&ContentTypeId=21&FileName=%20fnins-06-00011.pdf" target="_blank" class="fwn"><I>PDF version</I> </A> 
 
 
 
-
-
+</OL>
+</Blockquote>
 
 
 
