--- a/web/tutorial/ppt/index.html
+++ b/web/tutorial/ppt/index.html
@@ -43,9 +43,18 @@
 
 			</blockquote>
 
+<P class="subtitle">How to edit phenotype data in GeneNetwork</P>
+
+			<blockquote>
+				<UL>
+					<LI>Download <A Href="/tutorial/ppt/ppt/HowToEditPhenotypeDataInGeneNetwork.ppt" class="normalsize">Powerpoint</a> file
+				</UL>
+
+			</blockquote>
+
 
 <P>
-<P>Files last updated by RWW, July 23, 2005.
+<P>Files last updated by RWW, July 19, 2012.
 
 
 
