--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -19,17 +19,39 @@
 		<TD valign="top" height="200" width="100%" bgcolor="#eeeeee">
 
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
+
+
+
 <Blockquote>
-<STRONG>2012-5-4: Second Developmental Studies of the Genetics of Gene Expression in Brain have been entered into GeneNetwork (BIDMC/UTHSC Dev Neocortex P3 and P14 ILMv6.2 (Nov11) RankInv). </STRONG> Dr. Glenn Rosen and colleagues have contributed data on gene expression across sets of 32 BXD strains for the neocortex and striatum at two stages of development (postnatal days 3 and 14). They used the Illumina Mouse Genome 6 version 2 array. These data are matched by previous data sets for the adult neocortex and striatum. These data are now publicly available but users are requested to contact Glenn D. Rosen regarding the status of these new data. (Implemented by G Rosen, RW Williams and A Centeno).
+<STRONG>2012-07-20: BXD Pituitary gene expression data </STRONG> added to GeneNetwork. This is part of a systematic genetic analysis of the hypothalamic-pituitary-adrenal axis in the mouse (~5 strains). Data for hypothalamus and pituitary are complete and error checked. Data for the adrenals are still be error-checked. (Implemented by Khyobeni Mozhui, Adrienne Adler, Jesse Ingels, Arthur Centeno, Lu Lu, and Rob Williams).
+</Blockquote>
+
+
+<Blockquote>
+<STRONG>2012-07-01: New beta SEARCH feature by NAME </STRONG> (testing stage) now allows searching for genes/transcripts by the name of authors and scientists who have worked set of genes. The search "name=rakic" or "name=(williams rw)" will find genes that have been linked to articles by "Rakic" of "RW Williams" in PubMed. We are still working on the interface for this new search type. Send any suggestions for improvements or problems that you encounter. (Implemented by Lei Yan and Ashutosh Pandey).
+</Blockquote>
+
+
+<Blockquote>
+<STRONG>2012-06-04: GeneNetwork Development and Source Control now using GitHub </STRONG>. We have switched over from developing GeneNetwork using Apache Subversion (SVN) software versioning system to GitHub. <A HREF="https://github.com/genenetwork/genenetwork">GitHub</A> (Implemented by Lei Yan with in collaboration with from Christian Fernandez and Sam Ockman).
+</Blockquote>
+
+
+<Blockquote>
+<STRONG>2012-05-20: All GeneNetwork code is available on <A HREF="https://github.com/genenetwork/genenetwork">GitHub</A> </STRONG>(Implemented by Lei Yan with in collaboration with from Christian Fernandez and Sam Ockman).
+</Blockquote>
+
+
+<Blockquote>
+<STRONG>2012-05-04: Second Developmental Studies of the Genetics of Gene Expression in Brain </STRONG> have been entered into GeneNetwork (BIDMC/UTHSC Dev Neocortex P3 and P14 ILMv6.2 (Nov11) RankInv).  Dr. Glenn Rosen and colleagues have contributed data on gene expression across sets of 32 BXD strains for the neocortex and striatum at two stages of development (postnatal days 3 and 14). They used the Illumina Mouse Genome 6 version 2 array. These data are matched by previous data sets for the adult neocortex and striatum. These data are now publicly available but users are requested to contact Glenn D. Rosen regarding the status of these new data. (Implemented by G Rosen, RW Williams and A Centeno).
 </Blockquote>
 
 <Blockquote>
-
-<STRONG>2012-1-20: Mouse SNPs from dbSNP have been added to GeneNetwork.</STRONG> 10 million mouse SNPs from dbSNP (build 128) have been added to Variant Browser. They could be searched by name (e.g. rs31192936) (Implemented by Xiaodong Zhou and Ning Liu).
+<STRONG>2012-01-20: Mouse SNPs from dbSNP have been added to GeneNetwork.</STRONG> 10 million mouse SNPs from dbSNP (build 128) have been added to Variant Browser. They could be searched by name (e.g. rs31192936) (Implemented by Xiaodong Zhou and Ning Liu).
 </Blockquote>
 
 <Blockquote>
-<STRONG>2012-1-20: Literature correlation has been update to 2011 version.</STRONG> Dr. Ramin Homayouni and Dr. Lijing Xu kindly provide the 2011 version of mouse gene-gene literature correlation matrix to GeneNetwork. (Implemented by Xiaodong Zhou).
+<STRONG>2012-01-20: Literature correlation has been update to 2011 version.</STRONG> Dr. Ramin Homayouni and Dr. Lijing Xu kindly provide the 2011 version of mouse gene-gene literature correlation matrix to GeneNetwork. (Implemented by Xiaodong Zhou).
 </Blockquote>
 
 <Blockquote>
