Committer: root <root@spring211.uthsc.edu>
 On branch master
 Changes to be committed:
	new file:   dbdoc/GSE16780AB_UCLA_ML0911.html
	new file:   dbdoc/GSE16780BXH_UCLA_ML0911.html
	new file:   dbdoc/GSE16780MDP_UCLA_ML0911.html
	new file:   dbdoc/UTHSC_SPL_RMA_1210F.html
	new file:   dbdoc/UTHSC_SPL_RMA_1210M.html
	new file:   dbdoc/gn10.html
	modified:   footer.html
	modified:   javascript/selectDatasetMenu.js

--- a/web/footer.html
+++ b/web/footer.html
@@ -39,6 +39,11 @@ This site is currently operated by
 </TR>
 <TR>
 	<TD colspan=4 id="smallsize" align="left">
+		&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://atlas.uthsc.edu/mailman/listinfo/genenetwork">Join GeneNetwork Mailing List</a>
+	</TD>
+</TR>
+<TR>
+	<TD colspan=4 id="smallsize" align="left">
 		&nbsp;&nbsp;&nbsp;&nbsp;<!-- %s -->
 	</TD>
 </TR>
