--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -144,11 +144,13 @@ The BXD set of recombinant inbred (<A HREF="http://www.complextrait.org/archive/
 
 <OL>
 
-<LI> BXD73 and BXD80 and BXD103 are essentially identical. BXD80 is now referred to as BXD73B and BXD103 is referred to as BXD73C. Our recommendation is to collapse all data from these three strains and to refer to the data as originating from BXD73 substrains (or BXD73, BXD73B, and BXD73C)
+<LI> BXD73 and BXD80 and BXD103 are essentially identical. BXD80 is now referred to as BXD73a and BXD103 is referred to as BXD73b. Our recommendation is to collapse all data from these three strains and to refer to the data as originating from BXD73 substrains (or BXD73, BXD73a, and BXD73b)
 
-<LI> BXD48 and BXD96 are essentially identical. BXD96 is now referred to as BXD48B.
+<LI> BXD48 and BXD96 are essentially identical. BXD96 is now referred to as BXD48a.
 
-<LI> BXDD65 and BXD97 are essentially identical. BXD97 is now referred to as BXD65B.
+<LI> BXDD65 and BXD97 are essentially identical. BXD97 is now referred to as BXD65a.
+
+<LI> A strain used only at UTHSC from 2009 to 2012 was labeled BXD92A, but is now known (2012) to be identical to BXD65.
 
 </OL>
 
