Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/dbdoc/LV_G_0106_B.html
+++ b/web/dbdoc/LV_G_0106_B.html
@@ -280,7 +280,7 @@ C57BL/6J, DBA/2J, and BXD1 through BXD42 were originally obtained from The Jacks
 <Blockquote>
 <P>The first manuscript from this work is in press:
 
-<P>Gatti D, Maki A, Chesler EJ, Kosyk O, Kirova R, Lu L, Manly KF, Qu Y, Williams RW, Perkins A, Langston ME, Threadgill DW, Rusyn I (2007) Genome-level analysis of genetic regulation of liver gene expression networks. Hepatology, in press
+<P>Gatti D, Maki A, Chesler EJ, Kirova R, Kosyk O, Lu L, Manly KF, Williams RW, Perkins A, Langston MA, Threadgill DW, Rusyn I (2007) Genome-level analysis of genetic regulation of liver gene expression networks. Hepatology 46:548-557 <A HREF="http://www.genenetwork.org/images/upload/Gatti_Liver2007.pdf">Full Text PDF Version</A>
 
 </Blockquote>
 
