--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -140,17 +140,18 @@ The BXD set of recombinant inbred (<A HREF="http://www.complextrait.org/archive/
 
 <P>BXD43 through BXD100 were produced by Lu Lu, Jeremy Peirce, Lee M. Silver, and Robert W. Williams in the late 1990s and early 2000s using advanced intercross progeny (Peirce et al. <a href="http://www.biomedcentral.com/1471-2156/5/7"  target="_blank" class="fs14">2004</a>). These new strains have roughly twice the number of recombinations of conventional F2-derived RI strains. 
 
-<P>Recent genotyping of the new BXD strains (Oct 2011) using the MUGA platform and even earlier genotyping in 2008 using the Affymetrix Mouse Diversity platform demonstrate conclusively the following nomenclature problems and errors among the new BXD strains:
+<P>Recent genotyping of the new BXD strains (Oct 2011) using the MUGA platform (and even earlier genotyping in 2008 using the Affymetrix Mouse Diversity platform) demonstrates conclusively serious unintended cross-breeding among partially inbred BXD strains. This "contamination" or cross-breeding has resulted in sets of very closely related sister substrains that are almost genetically identical. In collaboration with the Jackson Laboratory (JAX), we have made the following changes in strain names to clarify the strong genetic relations among the newer BXD strains. 
+
+<P>In general, data for the following sister substrains should be collapsed prior to statistical analysis or gene mapping for the simple reason that the substrains are not genetically independent. However, if investigators do discover significant phenotype differences among strains, then data can be treated independently.
 
 <OL>
 
-<LI> BXD73 and BXD80 and BXD103 are essentially identical. BXD80 is now referred to as BXD73a and BXD103 is referred to as BXD73b. Our recommendation is to collapse all data from these three strains and to refer to the data as originating from BXD73 substrains (or BXD73, BXD73a, and BXD73b)
+<LI> BXD73 and BXD80 and BXD103 are genetically very similar.  BXD73 keeps its original name and JAX identifier number (JR#7117), whereas BXD80 is now referred to as BXD73a (JR#7124); and BXD103 is now referred to as BXD73b (JR#7146). Our recommendation is to collapse data from these three strains and to refer to the data as originating from the BXD73 substrains (or BXD73, BXD73a, and BXD73b)
 
-<LI> BXD48 and BXD96 are essentially identical. BXD96 is now referred to as BXD48a.
+<LI> BXD48 and BXD96 are sister substrains and are genetically identical at XX of YY markers (XX% identical by descent). BXD48 retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as BXD48a (JR#7139). Our recommendation is to collapse data from these two strains.
 
-<LI> BXDD65 and BXD97 are essentially identical. BXD97 is now referred to as BXD65a.
+<LI> BXDD65, BXD92, and BXD97 are sister substrains and are genetically identical at XX of YY markers (XX% identical by descent). BXD65 retains its original name and JAX identifier (JR#7110) whereas BXD92  is now referred to as BXD65b (JR#9677), and BXD97 is now referred to as BXD65a (JR#7140). Our recommendation is to collapse data from these three strains.
 
-<LI> A strain used only at UTHSC from 2009 to 2012 was labeled BXD92A, but is now known (2012) to be identical to BXD65.
 
 </OL>
 
