Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -146,11 +146,11 @@ The BXD set of recombinant inbred (<A HREF="http://www.complextrait.org/archive/
 
 <OL>
 
-<LI> BXD73 and BXD80 and BXD103 are genetically very similar.  BXD73 keeps its original name and JAX identifier number (JR#7117), whereas BXD80 is now referred to as BXD73a (JR#7124); and BXD103 is now referred to as BXD73b (JR#7146). Our recommendation is to collapse data from these three strains and to refer to the data as originating from the BXD73 substrains (or BXD73, BXD73a, and BXD73b)
+<LI> BXD73, BXD80 and BXD103 are genetically very similar. BXD73 and BXD80 are genetically identical at 82264 of 100290 markers (82% identical by descent). BXD73 keeps its original name and JAX identifier number (JR#7117), whereas BXD80 is now referred to as BXD73a (JR#7124). BXD73 and BXD103 are genetically identical at 90917 of 100290 markers (90.6% identical by descent). BXD103 is now referred to as BXD73b (JR#7146). Our recommendation is to collapse data from these three strains and to refer to the data as originating from the BXD73 substrains (or BXD73, BXD73a, and BXD73b)
 
-<LI> BXD48 and BXD96 are sister substrains and are genetically identical at XX of YY markers (XX% identical by descent). BXD48 retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as BXD48a (JR#7139). Our recommendation is to collapse data from these two strains.
+<LI> BXD48 and BXD96 are sister substrains, and are genetically identical at 93485 of 100290 markers (93.2% identical by descent). BXD48 retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as BXD48a (JR#7139). Our recommendation is to collapse data from these two strains.
 
-<LI> BXDD65, BXD92, and BXD97 are sister substrains and are genetically identical at XX of YY markers (XX% identical by descent). BXD65 retains its original name and JAX identifier (JR#7110) whereas BXD92  is now referred to as BXD65b (JR#9677), and BXD97 is now referred to as BXD65a (JR#7140). Our recommendation is to collapse data from these three strains.
+<LI> BXDD65, BXD92, and BXD97 are sister substrains. BXDD65 and BXD92 are genetically identical at 6155 of 6459 markers (95.3% identical by descent). BXD65 retains its original name and JAX identifier (JR#7110) whereas BXD92  is now referred to as BXD65b (JR#9677). BXDD65 and BXD97 are genetically identical at 92225 of 100290 markers (92% identical by descent). BXD97 is now referred to as BXD65a (JR#7140). Our recommendation is to collapse data from these three strains.
 
 
 </OL>
