Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -55,7 +55,16 @@
 <OL>
 
 <LI>
-Andreux PA, Williams EG, Koutnikova H, Houtkooper RH, Champy MF, Henry H, Schoonjana K, Williams RW, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Systems genetics of metabolism: the use of the BXD murine reference panel for multiscalar integration of traits. Cell, in press
+Hager R, Lu L, Rosen GD, Williams RW. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23011133" target="_blank" class="fwn">2012</A>) Genetic architecture supports mosaic brain evolution and independent brain-body size regulation. Nature Commun 3:1079  <A HREF="/images/upload/Hager_Mosaic_NatComm_2012.pdf" target="_blank" class="fwn">PDF version</A> <A href="http://www.nature.com/ncomms/journal/v3/n9/full/ncomms2086.html" target="_blank" class="fwn"><I>Full Text version</I> </A>
+
+<BR><SMALL>
+Summary: The mammalian brain consists of distinct parts that fulfil different functions. Finlay and Darlington have argued that evolution of the mammalian brain is constrained by developmental programs, suggesting that different brain parts are not free to respond individually to selection and evolve independent of other parts or overall brain size. However, comparisons among mammals with matched brain weights often reveal greater differences in brain part size, arguing against strong developmental constraints. Here we test these hypotheses using a quantitative genetic approach involving over 10,000 mice. We identify independent loci for size variation in seven key parts of the brain, and observe that brain parts show low or no phenotypic correlation, as is predicted by a mosaic scenario. We also demonstrate that variation in brain size is independently regulated from body size. The allometric relations seen at higher phylogenetic levels are thus unlikely to be the product of strong developmental constraints.
+</SMALL>
+<BR>
+<BR>
+
+<LI>
+Andreux PA, Williams EG, Koutnikova H, Houtkooper RH, Champy MF, Henry H, Schoonjana K, Williams RW, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Systems genetics of metabolism: the use of the BXD murine reference panel for multiscalar integration of traits. Cell 150:1287-1299
 <BR><SMALL>
 Summary: Metabolic homeostasis is achieved by complex molecular and cellular networks that differ significantly among individuals and are difficult to model with genetically engineered lines of mice optimized to study single gene function. Here, we systematically acquired metabolic phenotypes by using the EUMODIC EMPReSS protocols across a large panel of isogenic but diverse strains of mice (BXD type) to study the genetic control of metabolism. We generated and analyzed 140 classical phenotypes and deposited these in an open-access web service for systems genetics (www.genenetwork.org). Heritability, influence of sex, and genetic modifiers of traits were examined singly and jointly by using quantitative-trait locus (QTL) and expression QTL-mapping methods. Traits and networks were linked to loci encompassing both known variants and novel candidate genes, including alkaline phosphatase (ALPL), here linked to hypophosphatasia. The assembled and curated phenotypes provide key resources and exemplars that can be used to dissect complex metabolic traits and disorders.
 </SMALL>
@@ -331,11 +340,21 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 <LI>
 Alberts R, Chen H, Pommerenke C, Smit AB, Spijker S, Williams RW, Geffers R, Bruder D, Schughart K (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22182475" target="_blank" class="fwn">2011</A>) Expression QTL mapping in regulatory and helper T cells from the BXD family of strains reveals novel cell-specific genes, gene-gene interactions and candidate genes for auto-immune disease. BMC Genomics 12:610.  <A HREF="http://www.biomedcentral.com/content/pdf/1471-2164-12-610.pdf" target="_blank" class="fwn">PDF version</A>
 <LI>
+Andreux PA, Williams EG, Koutnikova H, Houtkooper RH, Champy MF, Henry H, Schoonjana K, Williams RW, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Systems genetics of metabolism: the use of the BXD murine reference panel for multiscalar integration of traits. Cell 150:1287-1299
+<LI>
 Boughter JD Jr, Mulligan MK, St John SJ, Tokita K, Lu L, Heck DH, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Genetic control of a central pattern generator: Rhythmic oromotor movement in mice Is controlled by a major locus near Atp1a2. PLoS One 7(5):e38169. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0038169" target="_blank" class="fwn"><I>Full Text version</I> </A>
 <LI>
 Bryant CD, Kole LA, Guido MA, Sokoloff G, Palmer AA  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Congenic dissection of a major QTL for methamphetamine sensitivity implicates epistasis. Genes, Brain and Behavior 11:623-632. <A href="/images/upload/Bryant_Palmer2012.pdf" target="_blank" class="fwn"><I>PDF version</I> </A>
 <LI>
-Downing C, Balderrama-Durbin C, Kimball A, Biers J, Wright H, Gilliam D, Johnson TE (2012) Quantitative trait locus mapping for ethanol teratogenesis in BXD recombinant inbred mice. Alcohol Clin Exp Res. doi: 10.1111/j.1530-0277.2012.01754.x.
+Downing C, Balderrama-Durbin C, Kimball A, Biers J, Wright H, Gilliam D, Johnson TE (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22413943" target="_blank" class="fwn">2012</A>) Quantitative trait locus mapping for ethanol teratogenesis in BXD recombinant inbred mice. Alcohol Clin Exp Res. doi: 10.1111/j.1530-0277.2012.01754.x.
+<LI>
+Durrant C, Swertz MA, Alberts R, Arends D, Möller S, Mott R, Prins P, van der Velde KJ, Jansen RC, Schughart K.(<A HREF="https://ncbi.nlm.nih.gov/pubmed/22396485" target="_blank" class="fwn">2012</A>) Bioinformatics tools and database resources for systems genetics analysis in mice--a short review and an evaluation of future needs. Brief Bioinform 13:135-42 <A HREF="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3294237/" target="_blank" class="fwn">HTML version</A>
+<LI>
+Gini B, Hager R (2012)Recombinant inbred systems canadvance research in behavioral ecology. Front. Gene. 3:198. doi: 10.3389/fgene.2012.00198  <A HREF="http://www.frontiersin.org/Genetic_Architecture/10.3389/fgene.2012.00198/fullf" target="_blank" class="fwn"><I>Full Text version</I> </A>
+<LI>
+Hager R, Lu L, Rosen GD, Williams RW. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23011133" target="_blank" class="fwn">2012</A>) Genetic architecture supports mosaic brain evolution and independent brain-body size regulation. Nature Commun 3:1079  <A HREF="/images/upload/Hager_Mosaic_NatComm_2012.pdf" target="_blank" class="fwn">PDF version</A> <A href="http://www.nature.com/ncomms/journal/v3/n9/full/ncomms2086.html" target="_blank" class="fwn"><I>Full Text version</I> </A>
+<LI>
+McKnite AM, Perez-Munoz ME, Lu L, Williams EG, Brewer S, Andreux PA, Bastiaansen JW, Wang X, Kachman SD, Auwerx J, Williams RW, Benson AK, Peterson DA, Ciobanu DC  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22723961" target="_blank" class="fwn">2012</A>) Murine gut microbiota is defined by host genetics and modulates variation of metabolic traits. PLoS One 7(6):e39191. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0039191" target="_blank" class="fwn"><I>Full Text version</I> </A>
 <LI>
 Mulligan MK, Wang X, Adler AL, Mozhui K, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Complex control of GABA(A) receptor subunit mRNA expression: variation, covariation, and genetic regulation. PLoS One 7(4):e34586. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0034586" target="_blank" class="fwn"><I>Full Text version</I> </A> 
 <LI>
@@ -387,7 +406,7 @@ Di Curzio DL, Goldowitz D  (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21347846
 <LI>
 Gatti DM, Lu L, Williams RW, Sun W, Wright FA, Threadgill DW, Rusyn I (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21616085"  target="_blank" class="fwn" >2011</a>) MicroRNA expression in the livers of inbred mice. Mutat Res 714:126-133
 <LI>
-Gibson JN, Jellen LC, Unger EL, Morahan G, Mehta M, Earley CJ, Allen RP, Lu L, Jones BC (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21732193"  target="_blank" class="fwn" >2011</a>) Genetic analysis of iron-deficiency effects on the mouse spleen. Mamm Genome, in press
+Gibson JN, Jellen LC, Unger EL, Morahan G, Mehta M, Earley CJ, Allen RP, Lu L, Jones BC (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21732193"  target="_blank" class="fwn" >2011</a>) Genetic analysis of iron-deficiency effects on the mouse spleen. Mamm Genome 22:556-62
 <LI>
 Hakvoort TB, Moerland PD, Frijters R, Sokolovic A, Labruyère WT, Vermeulen JL, Ver Loren van Themaat E, Breit TM, Wittink FR, van Kampen AH, Verhoeven AJ, Lamers WH, Sokolovic M (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21393243"  target="_blank" class="fwn" >2011</a>) Interorgan coordination of the murine adaptive response to fasting. J Biol Chem 286:16332-43
 <LI>
@@ -431,6 +450,9 @@ Porcu P, O'Buckley TK, Song SC, Harenza JL, Lu L, Wang X, Williams RW, Miles MF,
 <LI>
 Suwanwela J, Farber CR, Haung B, Song B, Pan C, Lyon KM, Lusis AJ (<a href="http://www.ncbi.nlm.nih.gov/pubmed/20954177"  target="_blank" class="fwn">2011</a>) Systems genetics analysis of mouse chondrocyte differentiation.   Journal of Bone and Mineral Research 26:74-760 
 <A HREF="/images/upload/Suwanwela_Lusis_2011.pdf" target="_blank" class="fwn"><I>PDF</I> </A> version
+<LI>Tan T (<A HREF="http://www.genengnews.com/best-of-the-web/genenetwork/2581/" target="_blank" class="fwn">2011</A>) GeneNetwork: Best of the Web. Genetics Engineering & Biotechnology News  31(3)
+
+
 <LI>
 Whitney IE, Raven MA, Lu L, Williams RW, Reese BE  (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21330668"  target="_blank" class="fwn" >2011</a>) A QTL on chromosome 10 modulates cone photoreceptor number in the mouse retina. Invest Ophthalmol Vis Sci. 52:3228-36
 <LI>
