Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -354,6 +354,8 @@ Gini B, Hager R (2012)Recombinant inbred systems canadvance research in behavior
 <LI>
 Hager R, Lu L, Rosen GD, Williams RW. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23011133" target="_blank" class="fwn">2012</A>) Genetic architecture supports mosaic brain evolution and independent brain-body size regulation. Nature Commun 3:1079  <A HREF="/images/upload/Hager_Mosaic_NatComm_2012.pdf" target="_blank" class="fwn">PDF version</A> <A href="http://www.nature.com/ncomms/journal/v3/n9/full/ncomms2086.html" target="_blank" class="fwn"><I>Full Text version</I> </A>
 <LI>
+Jellen LC, Unger EL, Lu L, Williams RW, Rousseau S, Wang X, Earley CJ, Allen RP, Miles MF, Jones BC (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22457016" target="_blank" class="fwn">2012</A>) Systems genetic analysis of the effects of iron deficiency in mouse brain. Neurogenetics 13:147-57
+<LI>
 McKnite AM, Perez-Munoz ME, Lu L, Williams EG, Brewer S, Andreux PA, Bastiaansen JW, Wang X, Kachman SD, Auwerx J, Williams RW, Benson AK, Peterson DA, Ciobanu DC  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22723961" target="_blank" class="fwn">2012</A>) Murine gut microbiota is defined by host genetics and modulates variation of metabolic traits. PLoS One 7(6):e39191. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0039191" target="_blank" class="fwn"><I>Full Text version</I> </A>
 <LI>
 Mulligan MK, Wang X, Adler AL, Mozhui K, Lu L, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Complex control of GABA(A) receptor subunit mRNA expression: variation, covariation, and genetic regulation. PLoS One 7(4):e34586. <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0034586" target="_blank" class="fwn"><I>Full Text version</I> </A> 
@@ -366,6 +368,10 @@ Rietman ML, Sommeijer JP; Neuro-Bsik Mouse Phenomics Consortium, Levelt CN, Heim
 <LI>
 Talishinsky A, Rosen GD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Systems genetics of the lateral septal nucleus in mouse: heritability, genetic control, and covariation with behavioral and morphological traits. PLoS One 7(8): e44236 
 <SMALL><A HREF="http://www.plosone.org/article/fetchObjectAttachment.action;jsessionid=FD5CD26B1104BCD693F22ABD746ED332?uri=info%3Adoi%2F10.1371%2Fjournal.pone.0038169&representation=PDF" target="_blank" class="fwn">PDF version</A><A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0044236" target="_blank" class="fwn"><I>Full Text version</I> </A> 
+</SMALL>
+<LI>
+Yin L, Unger EL, Jellen LC, Earley CJ, Allen RP, Tomaszewicz A, Fleet JC, Jones BC. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22461179" target="_blank" class="fwn">2012</A>) Systems genetic analysis of multivariate response to iron deficiency in mice. Am J Physiol Regul Integr Comp Physiol 302(11):R1282-96
+<SMALL><A HREF="/images/upload/Yin_Jones_2012.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <LI>
 Ziebarth JD, Cook MN, Wang X, Williams RW, Lu L, Cui Y  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" target="_blank" class="fwn">2012</A>) Treatment- and population-dependent activity patterns of behavioral and expression QTLs. PLoS One. 2012;7(2):e31805. 
@@ -447,6 +453,10 @@ Mozhui K, Wang X, Chen J, Mulligan MK, Li Z, Ingles J, Chen X, Lu L and Williams
 <A HREF="http://www.nature.com/tp/journal/v1/n7/pdf/tp201124a.pdf" target="_blank" class="fwn"><I>PDF</I> </A> version
 <LI>
 Porcu P, O'Buckley TK, Song SC, Harenza JL, Lu L, Wang X, Williams RW, Miles MF, Morrow AL (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21494628" class="fwn">2010</a>) Genetic analysis of the neurosteroid deoxycorticosterone and its relation to alcohol phenotypes: Identification of QTLs and downstream gene regulation. PLoS One 6:e18405 <A href="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0018405" target="_blank" class="fwn" ><I>Full Text HTML</I> </A> and <A href="/images/upload/Porcu_Morrow_2011.pdf" target="_blank" class="fwn" ><I>PDF </I> </A> versions
+<LI>
+Sutcliffe JG, Hedlund PB, Thomas EA, Bloom FE, Hilbush BS (<a href="http://www.ncbi.nlm.nih.gov/pubmed/21374699"  target="_blank" class="fwn">2011</a>) Peripheral reduction of β-amyloid is sufficient to reduce brain β-amyloid: implications for Alzheimer's disease.  J Neurosci Res. 2011 Jun;89(6):808-14. doi: 10.1002/jnr.22603
+<A HREF="http://onlinelibrary.wiley.com/store/10.1002/jnr.22603/asset/22603_ftp.pdf?v=1&t=h88szz5k&s=096cf28488dc3b3b5e62b2f74c2f9b67e8b02747" target="_blank" class="fwn"><I>PDF</I> </A> version
+
 <LI>
 Suwanwela J, Farber CR, Haung B, Song B, Pan C, Lyon KM, Lusis AJ (<a href="http://www.ncbi.nlm.nih.gov/pubmed/20954177"  target="_blank" class="fwn">2011</a>) Systems genetics analysis of mouse chondrocyte differentiation.   Journal of Bone and Mineral Research 26:74-760 
 <A HREF="/images/upload/Suwanwela_Lusis_2011.pdf" target="_blank" class="fwn"><I>PDF</I> </A> version
